source/client/ui/explorer/styles.scss
/* ... */
.sv-extended-annotation {
  .sv-title {
    cursor: pointer;
  }
}

.sv-standard-annotation {
  pointer-events: none;

  &.sv-enable-events {
    pointer-events: auto;
    cursor: pointer;
  }
}

.sv-annotation-overlay {
  padding: 7px;
  pointer-events: auto;
  background-color: $menu-color-background;
  max-width: #{"min(80%, 800px)"};
  min-width: 50%;
  max-height: 90%;
  overflow-y: auto;
  cursor: auto;

  .sv-annotation-body {
    .ff-button {
      background: rgba(0, 0, 0, 0.01); // hack to get click events

      &:hover {
        text-decoration: underline;
      }
    }
  }
}

////////////////////////////////////////////////////////////////////////////////
// AR MODE

.sv-ar-prompt {
  flex: 1 1 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  border-radius: 20px;
  //height: 200px;
  margin: 30% 0 0 0;
  overflow: hidden;
  background-color: $menu-color-background;

  .sv-content {
    flex: 1;
    width: 100%;
    margin: 10px 10px;
    text-align: center;
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none;

    .sv-ar-icon {
      height: 10em;
    }
  }
}

.sv-ar-menu {
  display: flex;
  position: absolute;
  bottom: 0px;
  flex-direction: row;
  margin: 0 0 $canvas-border-width $canvas-border-width;
  align-items: end;

  & > .ff-button {
    box-sizing: border-box;
    -webkit-tap-highlight-color: transparent;
    width: $main-menu-button-size;
    height: $main-menu-button-size;
    margin: 0 6px 2px 0;
    background-color: $menu-color-background-hover;
    border-radius: 20px;
    font-size: 17px;
    transition: all common.$tx-short;
    pointer-events: auto;

    &:hover, &:focus {
      outline: none;
      background-color: $menu-color-background-hover;
      fill: common.$color-text;
    }

    &[selected] {
      background-color: common.$color-primary;
      color: $menu-color-text;

      & > .ff-icon {
        filter: drop-shadow(1px 1px 6px color.adjust(common.$color-primary, $lightness: -10%));
        fill: common.$color-text;
      }

      &:hover, &:focus {
        background-color: common.$color-primary-light;
      }
    }
  }

  & .sv-tag-cloud {
    width: 100%;

    & .sv-section-lead {
      display: none;
    }
  }
}

.sv-ar-code {
  position: relative;
  width: 420px;
  max-width: 85%;
  max-height: 90%;
  padding: 8px;
  background: common.$color-background;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.35);
  pointer-events: auto;

  .ff-title {
    margin: 0.5em 0 1em 0;

    .ff-icon {
        height: 2em;
        width: 2em;
        padding: 2px;
        border-radius: 20px;
        background-color: $menu-color-background-hover;
      }
  }

  img {
    height: 250px;
    margin: auto;
  }
}

////////////////////////////////////////////////////////////////////////////////
// CHROME VIEW

.sv-chrome-view {
  @include common.font-ui-normal;
  font-size: 0.85em;
  line-height: 1.35;
  color: common.$color-text;
  @include common.fullsize;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  background: linear-gradient(to bottom, color.adjust(black, $alpha: -0.7), color.adjust(black, $alpha: -0.85) 10%, transparent 25%);

  z-index: 3;

  .ff-button {
    flex: 0 1 auto;
    box-sizing: border-box;

    &:focus {
      outline: none;
      box-shadow: 0 0 3pt 2pt color.adjust(common.$color-primary, $lightness: 50%);
    }

    &:focus:not(:focus-visible) {
      outline: 0;
      box-shadow: 0 0;
    }

    &:focus-visible {
      outline: none;
      box-shadow: 0 0 3pt 2pt color.adjust(common.$color-primary, $lightness: 50%);
    }

    &:hover {
      outline: none;

      & > .ff-icon {
        fill: common.$color-text;
      }
    }

    &[selected] {
      background-color: common.$color-primary;

      &[disabled] {
        background-color: common.$color-background-light;
      }

      & > .ff-icon {
        filter: drop-shadow(1px 1px 6px color.adjust(common.$color-primary, $lightness: -10%));
        fill: common.$color-text;
      }

      &:hover {
      }
      &:focus {
      }
    }
  }
}

////////////////////////////////////////////////////////////////////////////////
// CHROME HEADER

.sv-chrome-header {
  display: flex;
  align-items: flex-start;
  height: 100%;
  position: relative;

  .sv-top-bar {
    flex: 1 1 auto;
    display: flex;
    align-items: flex-start;
    height: 40px;
    margin: 9px 9px 0 0;
    overflow: hidden;
  }

  .sv-main-title {
    flex: 1 1 auto;
    margin: $canvas-border-width 8px;
    font-family: "Hind Siliguri", sans-serif;;
    font-weight: normal;
    font-size: 1.412em;
    white-space: pre;
    color: common.$color-text-light;
    @include common.noselect;

    span {
      color: transparent;
    }
  }
}

////////////////////////////////////////////////////////////////////////////////
// CHROME FOOTER

.sv-chrome-footer {
  display: block;
  position: absolute;
  bottom: 0;
  right: 0;
  //z-index: -1;

  .sv-bottom-bar {
    flex: 1 1 auto;
    display: flex;
    align-items: flex-end;
    text-align: right;
    //height: 30px;
    //margin: 9px 9px 0 0;
    overflow: hidden;

    & > .ff-button {
      margin: 6px 6px 6px 5px;
      @include circle-btn;
    }
  }

  .sv-text-icon {
    font-family: "Hind Siliguri", sans-serif;
    font-weight: bold;
    line-height: 25px;
  }
}

////////////////////////////////////////////////////////////////////////////////
// MAIN MENU

.sv-main-menu-wrapper {
  position: relative;
  height: 100%;
  min-width: 50px;
}

.sv-main-menu {
  display: flex;
  flex-direction: column;
  padding: $canvas-border-width $canvas-border-width+3 $canvas-border-width $canvas-border-width;
  height: 100%;
  overflow-y: auto;
  overflow-x: hidden;
  pointer-events: auto;
  position: absolute;
  box-sizing: border-box;
  overscroll-behavior-y: contain;

  & > .ff-button {
    margin: 2px 0;
    @include circle-btn;
  }
}
/* ... */

